--- a/FlexBox.html
+++ b/FlexBox.html
@@ -1,80 +1,125 @@
 <html>
+
 <head>
   <title>Flex Box</title>
   <link rel="stylesheet" href="FlexBox.css">
 </head>
+
 <body>
-  <div class="card">
-    <img src='https://cdn.mos.cms.futurecdn.net/6t8Zh249QiFmVnkQdCCtHK.jpg'>
-    <div class='title'>
-      Laptop 256GB SSD
+  <div class='container'>
+    <div class="card card1">
+      <img src='https://cdn.mos.cms.futurecdn.net/6t8Zh249QiFmVnkQdCCtHK.jpg'>
+      <!-- <div class='title'>
+        Laptop 1
+      </div>
+      <div class='description'>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, amet.
+      </div>
+      <div class='rating'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        (56)
+      </div>
+      <div class='price'>
+        ₹ 67,000.00
+      </div>
+      <div class='original-price'>₹ 77,000.00</div>
+      <div class='buttons'>
+        <button class='buy'>Buy</button>
+        <button class='cart'>Cart</button>
+      </div> -->
     </div>
-    <div class='description'>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, amet.
+    <div class="card card2">
+      <img src='https://cdn.mos.cms.futurecdn.net/6t8Zh249QiFmVnkQdCCtHK.jpg'>
+      <div class='title'>
+        Laptop 2
+      </div>
+      <div class='description'>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, amet.
+      </div>
+      <div class='rating'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        (56)
+      </div>
+      <div class='price'>
+        ₹ 67,000.00
+      </div>
+      <div class='original-price'>₹ 77,000.00</div>
+      <div class='buttons'>
+        <button class='buy'>Buy</button>
+        <button class='cart'>Cart</button>
+      </div>
     </div>
-    <div class='rating'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      (56)
+    <div class="card card3">
+      <img src='https://cdn.mos.cms.futurecdn.net/6t8Zh249QiFmVnkQdCCtHK.jpg'>
+      <div class='title'>
+        Laptop 3
+      </div>
+      <div class='description'>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, amet.
+      </div>
+      <div class='rating'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        (56)
+      </div>
+      <div class='price'>
+        ₹ 67,000.00
+      </div>
+      <div class='original-price'>₹ 77,000.00</div>
+      <div class='buttons'>
+        <button class='buy'>Buy</button>
+        <button class='cart'>Cart</button>
+      </div>
     </div>
-    <div class='price'>
-      ₹ 67,000.00
-    </div>
-    <div class='original-price'>₹ 77,000.00</div>
-    <div class='buttons'>
-      <button class='buy'>Buy</button>
-      <button class='cart'>Cart</button>
-    </div>
-  </div>
-  <div class="card">
-    <img src='https://cdn.mos.cms.futurecdn.net/6t8Zh249QiFmVnkQdCCtHK.jpg'>
-    <div class='title'>
-      Laptop 256GB SSD
-    </div>
-    <div class='description'>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, amet.
-    </div>
-    <div class='rating'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      (56)
-    </div>
-    <div class='price'>
-      ₹ 67,000.00
-    </div>
-    <div class='original-price'>₹ 77,000.00</div>
-    <div class='buttons'>
-      <button class='buy'>Buy</button>
-      <button class='cart'>Cart</button>
-    </div>
-  </div>
-  <div class="card">
-    <img src='https://cdn.mos.cms.futurecdn.net/6t8Zh249QiFmVnkQdCCtHK.jpg'>
-    <div class='title'>
-      Laptop 256GB SSD
-    </div>
-    <div class='description'>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, amet.
-    </div>
-    <div class='rating'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      <img src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
-      (56)
-    </div>
-    <div class='price'>
-      ₹ 67,000.00
-    </div>
-    <div class='original-price'>₹ 77,000.00</div>
-    <div class='buttons'>
-      <button class='buy'>Buy</button>
-      <button class='cart'>Cart</button>
-    </div>
+    <!-- <div class="card card4">
+      <img src='https://cdn.mos.cms.futurecdn.net/6t8Zh249QiFmVnkQdCCtHK.jpg'>
+      <div class='title'>
+        Laptop 4
+      </div>
+      <div class='description'>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, amet.
+      </div>
+      <div class='rating'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        <img
+          src='https://cdn1.iconfinder.com/data/icons/hand-signs-emotions-bright-flat-design/128/star-favorite-rating-important-512.png'>
+        (56)
+      </div>
+      <div class='price'>
+        ₹ 67,000.00
+      </div>
+      <div class='original-price'>₹ 77,000.00</div>
+      <div class='buttons'>
+        <button class='buy'>Buy</button>
+        <button class='cart'>Cart</button>
+      </div>
+    </div> -->
   </div>
 </body>
+
 </html>
