Bootstrap: Recap, Components Overview

--- a/BootstrapComponents.html
+++ b/BootstrapComponents.html
@@ -89,7 +89,7 @@
         <div class="card" style="width: 18rem;">
           <img src="https://m.media-amazon.com/images/I/41sGASjc4-L.jpg" class="card-img-top" alt="Image Not Found">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Card title <span class="badge bg-success">New</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="btn btn-dark">Go somewhere</a>
           </div>
@@ -99,7 +99,7 @@
         <div class="card" style="width: 18rem;">
           <img src="https://m.media-amazon.com/images/I/41sGASjc4-L.jpg" class="card-img-top" alt="Image Not Found">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Card title <span class="badge bg-warning">Trending</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="btn btn-dark">Go somewhere</a>
           </div>
