JS: Data Types, If Condition and Ternary Operator, Equality Operator, Strict Equality Operator, Truthy and Falsy Values, NaN

--- a/JavaScript2.html
+++ b/JavaScript2.html
@@ -22,9 +22,10 @@
     // window.alert( x + y ) // Operators with JS number values
 
     /* O/P ways in JS:
-    1. innerHTML
+    1. innerHTML / innerText
     2. window.alert
     3. console.log
+    4. document.write
     */
 
     // var z = window.confirm('Are you older than 18 yrs?')
@@ -32,10 +33,16 @@
 
     // null - Empty value/placeholder
 
-    var inputByUser = window.prompt('Enter your age', 18)
-    console.log('Your age is ', inputByUser)
+    // var inputByUser = window.prompt('Enter your age', 18)
+    // console.log('Your age is ', inputByUser)
+
+    document.write('We are learning Js')
   </script>
 </head>
 <body>
+  <h1> JavaScript Classes </h1>
+  <script>
+    document.write('Body ends now')
+  </script>
 </body>
 </html>
