--- a/JavaScriptArrays.html
+++ b/JavaScriptArrays.html
@@ -6,20 +6,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arrays</title>
   <script>
-    // Data Structure which is a collection of elements
-    let a = [2, 4, 1, 5]
-    console.log(a)  // 2,4,1,5
+    // Data Structure which is a collection of elements [Arrays: Numbered index]
+    // let a = [2, 4, 1, 5]
+    // console.log(a)  // 2,4,1,5
 
-    a.push(5)
-    console.log(a)  // 2,4,1,5,5
+    // a.push(5)
+    // console.log(a)  // 2,4,1,5,5
 
-    let x = a.pop(5)
-    console.log(a)  // 2,4,1,5
+    // let x = a.pop()
+    // console.log(x + ' was popped')
+    // console.log(a)  // 2,4,1,5
 
-    console.log(x + ' was popped')
+    // let y = a.pop()
+    // console.log(y + ' was popped')
+    // console.log(a)  // 2,4,1,5
 
-    let b = ['Dhanashree', 'Anirban', 'Jyoti']
-    console.log(b)
+    // let b = ['Dhanashree', 'Anirban', 23]
+    // console.log(b)
+
+    /*
+    Stack: s1 = |2 3 5 12 <- TOP
+
+    LIFO: Last in First Out
+
+    */
+
+    // console.log(b.length)
+
+    // console.log(b[b.length-1])
+
+    // b[b.length] = 'Sai Krishna'
+    // console.log(b)
+
+    // b[5] = 'Shree Hari'    // Formation of holes
+    // console.log(b)
+
+    // b[0] = 'Sai Krishna'
+    // console.log(b)
+
+    // 1. 2, 5, 13
+    // 2. 10, 2, 5,  13
+
+    // Array Iteration
+    // for(let i = 0; i < b.length ;i++){
+    //   b[i] = b[i] + 2
+    // }
+
+    // let a = b.shift()
+
+    // console.log(a + ' was removed from the array')
+    // console.log(b)
+
+    // b.unshift('Suvarchala')
+    // b.unshift('Suman')
+
+    // console.log(b)
+
+    let b = ['Dhanashree', 'Anirban', 23, 'Maneesh', 'Talib']
+
+    // b.pop()             // 'Dhanashree', 'Anirban'
+    // b.push(23)          // 'Dhanashree', 'Anirban', 23
+    // b.unshift('Shyam')  // 'Shyam', 'Dhanashree', 'Anirban', 23
+    // b.pop()             // 'Shyam', 'Dhanashree', 'Anirban'
+    // b.shift()           // 'Dhanashree', 'Anirban'
+    // b.shift()           // 'Anirban'
+
+    // b.pop()             // 'Dhanashree', 'Anirban'
+    // b.reverse()         // 'Anirban', 'Dhanashree', 23
+    // b.push(23)          // 'Anirban', 'Dhanashree', 23
+    // b.unshift('Shyam')  // 'Shyam', 'Anirban', 'Dhanashree', 23
+    // b.pop()             // 'Shyam', 'Anirban', 'Dhanashree'
+    // b.shift()           // 'Anirban', 'Dhanashree'
+    // b.shift()           // 'Dhanashree'
+
+    // let c = ['Maneesh', 'Talib', 23, 'Prajakta']
+
+    // let d = ['Vidhi', 'Vikas', 'Suraj']
+
+    // b = b.concat(c)
+
+    // console.log(c.concat(b, d))
+
+    // console.log(b.slice(1, 3))
+
+    // delete b[0]  // Holes
+
+    // console.log(b)
 
   </script>
 </head>
@@ -27,3 +99,11 @@
   
 </body>
 </html>
+
+<!--
+  NOTE:
+  let a = 'JavaScript'
+  let b = 2
+
+  console.log(b+a)
+-->
