JavaScript: Arrays Recap, HTML Quiz, Functions Overview

--- a/JavaScriptArrays.html
+++ b/JavaScriptArrays.html
@@ -93,6 +93,15 @@
 
     // console.log(b)
 
+
+    let a = [1, 4, 5, 3, 2]
+
+    console.log(a.length)
+
+    a[a.length] = 6
+
+    console.log(a)
+
   </script>
 </head>
 <body>
