--- a/JavaScriptArraysStrings.html
+++ b/JavaScriptArraysStrings.html
@@ -6,22 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arrays - String</title>
   <script>
-    let a = ['Dhanashree', 'Anirban', 23, 'Maneesh', 'Talib']
+    // let a = ['Dhanashree', 'Anirban', 23, 'Maneesh', 'Talib']
 
     // console.log(a)
 
     // console.log(a.toString())
 
     // Array -> String [JOIN]
-    let b = a.join('-')
+    // let b = a.join('-')
 
-    console.log(b)
+    // console.log(b)
 
-    // String -> Array [SPLIT]
-    let c = 'Dhanashree-Anirban-23-Maneesh-Talib'
+    // // String -> Array [SPLIT]
+    // let c = 'Dhanashree-Anirban-23-Maneesh-Talib'
 
-    let d = c.split('A')
-    console.log(d)
+    // let d = c.split('A')
+    // console.log(d)
+
+
+    let s = 'JavaScriptHTML-CSS'
+
+    let a = s.split('')
+
+    console.log(a)
   </script>
 </head>
 <body>
