--- a/JavaScriptAnonymousFunctions.html
+++ b/JavaScriptAnonymousFunctions.html
@@ -41,6 +41,10 @@
     // var a = prompt('Enter a number:')
     // ans = calculate(a)
     // console.log(ans);
+
+    // IMP
+    // console.log(0.1 + 0.2 == 0.3)
+
   </script>
 </head>
 
