JavaScript: Arrow Functions Recap, DSA Problems, Self Invoking Function

--- a/JavaScriptArrowFunctions.html
+++ b/JavaScriptArrowFunctions.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,13 +21,82 @@
     // }
 
     // let fun2 = () => 'Arrow is amazing!'
-    
+
     // Arrow Functions don't get hoisted!
-    var fun2 = (a, b) => a - b    
-    console.log(fun2(10, 5))
+    // var fun2 = (a, b) => a - b    
+    // console.log(fun2(10, 5))
+
+    // let arr = ['Vikas', 'Vidhi']
+    // arr.sort((a, b) => a - b)
+    // console.log(arr)
+
+    // console.log('9' - '4');
+
+    // const fullName = (firstName, lastName) => {
+    //   let fullNameOfTheStudent = firstName + ' ' + lastName
+    //   return fullNameOfTheStudent
+    // }
+
+    // const fullName = (firstName) => {
+    //   let appreciateTheStudent = firstName + ' is very good!'
+    //   return appreciateTheStudent
+    // }
+
+    // const check = (num) => {
+    //   let isDivisibleBy3and5 = num % 3 === 0 && num % 5 === 0
+
+    //   return isDivisibleBy3and5 ? 'DIVISIBLE' : 'NOT DIVISIBLE'
+
+    //   // if(isDivisibleBy3and5)
+    //   //   return 'DIVISIBLE'
+    //   // else
+    //   //   return 'NOT DIVISIBLE'
+    // }
+
+    // I/P: jyoti
+    // O/P: Jyoti
+
+    // console.log(check(15))
+
+    // let inputString = prompt('Enter any string')
+
+    // const capitalizeString = (inputString) => {
+    //   if(!inputString.length)
+    //     return 'INVALID INPUT'
+    //   let modifiedString = inputString[0].toUpperCase() + inputString.slice(1)
+    //   return modifiedString
+    // }
+
+    // const capitalizeString = (inputString) => !inputString.length ? 'INVALID INPUT' : inputString[0].toUpperCase() + inputString.slice(1)
+
+    // console.log(capitalizeString(inputString))
+
+    // let fun1 = (str) => {
+    //   if (str[0] !== str[0].toUpperCase()) {
+    //     return str.charAt(0).toUpperCase() + str.slice(1);
+    //   } else {
+    //     return str
+    //   }
+    // };
+    // console.log(fun1("Pugazh"));
+
+    // let cap = (str) => {
+    //   if (str.charCodeAt(str[0]) > 97)
+    //     return str[0].toUpperCase() + str.slice(1)
+    //   else
+    //     return str
+    // }
+    // console.log(cap(prompt('Enter the string')))
+
+    // let inp = prompt("Enter input")
+    // let fun = (inp) => inp.replace(inp.charAt(0), inp.charAt(0).toUpperCase());
+
+    // console.log(fun(inp));
   </script>
 </head>
+
 <body>
-  
+
 </body>
+
 </html>
