JavaScript: Events and Objects Overview

--- a/JavaScriptAnonymousFunctions.html
+++ b/JavaScriptAnonymousFunctions.html
@@ -11,7 +11,7 @@
 
     // // Function Expression
     // let fun1 = function (){
-    //   console.log("I'm Anonymous :(")
+    //   console.log("I'm Anonymous ")
     // }
 
     // // Invoke the anonymous function?
