JavaScript: Objects, Properties, Nested Objects, JSON, Objects in Arrays and viceversa

--- a/JavaScriptObjects.html
+++ b/JavaScriptObjects.html
@@ -20,14 +20,14 @@
       'course': 'Web Dev'
     }
 
-    let monalisaDetails = {
-      'name': 'Monalisa',
-      'country': 'India',
-      'course': 'FE Dev'
-    }
+    // let monalisaDetails = {
+    //   'name': 'Monalisa',
+    //   'country': 'India',
+    //   'course': 'FE Dev'
+    // }
 
-    console.log(Object.keys(monalisaDetails))
-    console.log(Object.values(monalisaDetails))
+    // console.log(Object.keys(monalisaDetails))
+    // console.log(Object.values(monalisaDetails))
 
     // console.log(souravDetails['name'] + ' from ' + souravDetails['country'] + ' is studying ' + souravDetails['course'])
     // console.log(monalisaDetails['name'] + ' from ' + monalisaDetails['country'] + ' is studying ' + monalisaDetails['course'])
@@ -35,9 +35,62 @@
     // Accessing the object values using keys - 2 methods
     // console.log(souravDetails['name'])
     // console.log(souravDetails.course)
+
+    // let arr = [1, 2, 5]
+    // arr[arr.length] = 6
+    // console.log(arr)
+
+    // let x = prompt('Enter your tech stack')
+
+    // souravDetails.techStack = ["MERN", "MEAN"]
+
+    // souravDetails.currentTech = 'JavaScript'
+
+    // souravDetails.numberOfHobbies = 3
+
+    // souravDetails.likesIceCream = false
+
+    // console.log(souravDetails)
+
+    // let x = prompt('Enter some numbers separated by commas')
+    // let arrInput = x.split(',')
+    // console.log(arrInput)
   </script>
 </head>
 <body>
-  
+  <p id='p1'></p>
+  <script>
+    // let souravDetails = {
+    //   'name' : 'Sourav',
+    //   'country': 'India',
+    //   'course': 'Web Dev'
+    // }
+
+    // let arr = [1, 3, 4]
+
+    // document.getElementById('p1').innerText = JSON.stringify(souravDetails)
+
+    /* 
+      JSON - Javascript Object Notation 
+
+      {
+        'name' : 'Sourav',
+        'country': 'India',
+        'course': 'Web Dev'
+      } 
+    */
+  </script>
 </body>
 </html>
+
+<!--
+  Take array I/P from the user:
+  // let arr = []
+  
+  // for(let i=0;i<3;i++){
+  //   let x = Number(prompt('Enter some Number'))
+  //   arr.push(x)
+  // }
+
+  // console.log(arr)
+-->
