JavaScript: Inbuilt Object Constructors, Primitive and non-primitive data types, CSS Quiz

--- a/JavaScript/JavaScriptObjectConstructors.html
+++ b/JavaScript/JavaScriptObjectConstructors.html
@@ -21,29 +21,73 @@
     // }
 
     // Constructors: Methods which are used to give initial values to the objects
-    function Student(name, course, batch, techStack) {
-      this.name = name
-      this.course = course
-      this.batch = batch
-      this.techStack = techStack
-    }
+    // function Student(name, course, batch, techStack) {
+    //   this.name = name
+    //   this.course = course
+    //   this.batch = batch
+    //   this.techStack = techStack
+    // }
 
-    let amber = new Student('Amber', 'Course1', 'Batch1', 'MERN')
-    let jyoti = new Student('Jyoti', 'Course1', 'Batch1', 'MERN')
+    // let amber = new Student('Amber', 'Course1', 'Batch1', 'MERN')
+    // let jyoti = new Student('Jyoti', 'Course1', 'Batch1', 'MERN')
 
-    console.log(jyoti)
+    // console.log(jyoti)
 
-    let x = 5
-    console.log(x)
+    // let x = 5
+    // console.log(x)
 
     // Inbuild Constructors
-    let y = new Number(5)
+    // let y = new Number(5)
 
-    console.log(y.valueOf())
+    // let y1 = new Number(10)
+
+    // let z = new String('JavaScript')
+
+    // let a = new Boolean(true)
+
+    // let z = 3 ** 5
+
+    // let a = Math.sqrt(7)
+
+    /*
+      Math.trunc()
+      Math.PI
+      Math.sqrt()
+      Math.floor()
+      Math.ceil()
+      Math.max()
+      Math.min()
+      Math.exp()
+      Math.pow(3,5)
+    */
+
+    // console.log(Math.ceil(Math.PI))
+
+    // console.log(Math.min(2,5,7,1))
+
+    // console.log(Math.exp(5)) // e^5
+
+    // console.log(Math.ceil(Math.random()*10))  // 1 and 10
+
+    // console.log(Math.pow(3, 5))
+
+    // let a = new RegExp('ac/vc')
+
+    let a = new Date(2018, 0, 7, 11, 0, 0, 0)
+
+    console.log(a)
 
   </script>
+  <!-- <style>
+    p{
+      --c: 400px;
+      height: var(--c);
+      background-color: rgba(32,33,43);
+      color: white;
+    }
+  </style> -->
 </head>
 <body>
-  
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat blanditiis nesciunt similique neque aliquid, optio laborum fuga cum, iusto dignissimos ullam voluptatibus ab qui nihil commodi corrupti repellat illo, odit eaque. Obcaecati dolore magni, dignissimos odit exercitationem quis, officiis error asperiores nam iusto ab doloribus similique magnam molestiae quia ad, veritatis minus dolores quaerat. Eum sint ullam quis beatae magnam similique dolore porro error eaque molestiae ab, deleniti ratione fuga. Eaque voluptates fuga culpa nam provident harum laudantium alias nobis numquam, aliquid ex deleniti ipsam sunt fugiat labore sapiente accusamus tempora quam soluta iure quas adipisci ipsum repellat libero! Dolorum?</p>
 </body>
 </html>
