--- a/JavaScript/JavaScriptArrayMethods2.html
+++ b/JavaScript/JavaScriptArrayMethods2.html
@@ -34,7 +34,7 @@
     //   console.log(value)
     // })
 
-    let arr = [1, 2, 1, 1, 3, 8, 2, 1, 1]
+    // let arr = [1, 2, 1, 1, 3, 8, 2, 1, 1]
 
     // let newArray = []
 
@@ -56,7 +56,57 @@
     //   return element === 1
     // })
 
-    let arr = [2, 4, 1, 5, 2, 6, 7]  // Expected O/P: 4, 1, 5, 6, 7
+    // let arr = [2, 4, 1, 5, 2, 2, 6, 7, 7]  // Expected O/P: 4, 1, 5, 6, 7
+
+    // let newArray = arr.filter(function (e, i) {
+    //   return arr.indexOf(e) === arr.lastIndexOf(e)  
+    // })
+
+    // console.log(newArray);
+
+    /* 3. MAP: 
+    - Loop through each element
+    - Returns array
+    */
+
+    // arr = [20000, 30000, 10000, 50000, 40000]
+
+    // arr = arr.map(function (value) {
+    //   if(value !== 50000)
+    //     value = value + 2000
+    //   return value
+    // })
+
+    // console.log(arr)
+
+    // Fibonacci Series: 0 1 1 2 3 5 8 13 21 34 55 ...
+    let arr = [2, 6, 3, 1, 4, 9]   // O/P: [1, 8, 2, 1, 3, 34]
+
+    // Q: Use the .map() and return a new array which will have the number at that index in Fibonacci series
+
+    let fibonacciSeriesArray = [0, 1]
+    let x = 15
+    for (let i = 1; i < x; i++) {
+      fibonacciSeriesArray.push(fibonacciSeriesArray[i] + fibonacciSeriesArray[i - 1])
+    }
+    let op = arr.map((element) => {
+      return fibonacciSeriesArray[element]
+    })
+    console.log(op)
+
+
+    function fibonacci(num) {
+      if (num < 2) {
+        return num
+      }
+      else {
+        return fibonacci(num - 1) + fibonacci(num - 2)
+      }
+    }
+
+    let newArr = arr.map((value) => {
+      return fibonacci(value)
+    })
   </script>
 </head>
 
