JavaScript: Array Methods - .reduce, ES6 Syntaxes, Non Primitive Data Type Assignment

--- a/JavaScript/JavaScriptArrayMethods2.html
+++ b/JavaScript/JavaScriptArrayMethods2.html
@@ -225,6 +225,31 @@
     .some will return true: If atleast one iteration returns true
     .every will return true: If all iterations return true
     */
+
+    /* ------------------------------------------------------- */
+    /* 5. REDUCE (Whether ALL elements in that array satisfy a particular condition or not)
+    */
+    /* ------------------------------------------------------- */
+
+    // let arr = [2, 3, 4]
+
+    // let sum = 0;
+
+    // arr.forEach(function(element) {
+    //   sum = sum + element
+    // })
+
+    // console.log(sum)
+
+    // let sum = arr.reduce(function(temporarySum, element, index){
+    //   return temporarySum + element
+    // }, 2)
+
+    // let product = arr.reduce((temporaryProduct, element, index) => {
+    //   return temporaryProduct * element
+    // }, 2)
+
+    // console.log(sum, product)
   </script>
 </head>
 
