JavaScript: HTML and CSS Quiz, .reduce, Continue on ES6 Syntaxes

--- a/JavaScript/JavaScriptArrayMethods2.html
+++ b/JavaScript/JavaScriptArrayMethods2.html
@@ -250,6 +250,19 @@
     // }, 2)
 
     // console.log(sum, product)
+
+    // let arr = [3, 8, 5, 2, 6]
+
+    // let max = arr.reduce((temporaryMax, element) => {  // 2  6
+    //   if(element > temporaryMax)
+    //     return element
+    //   else
+    //     return temporaryMax
+    // }, 0)
+
+    // console.log(-10000000000000 < Number.NEGATIVE_INFINITY)
+
+    // console.log(arr)
   </script>
 </head>
 
