JavaScript: Error Handling, finally, Closures, Function Methods Intro

--- a/JavaScript/JavaScriptErrorHandling.html
+++ b/JavaScript/JavaScriptErrorHandling.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,12 +27,24 @@
 
     } catch (error) {
       console.log(error)
+    } finally {
+      console.log("I'll be executed always")
     }
 
     console.log('End of Code')
   </script>
 </head>
+
 <body>
-  
+
 </body>
+
 </html>
+
+<!--
+  function abc(...args){
+    console.log(args)
+  }
+
+  abc('Sai Krishna', 'Saurabh', 'Suvarchala')
+-->
